Use standard testthat setup
And modify test-2.brew to only list base packages, not every installed package, and not to record every env var

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,4 +19,6 @@ Description: Implements a templating framework for mixing text and
         module.
 License: GPL-2
 Repository: CRAN
-Suggests: testthat
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
