--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,5 @@ Repository: CRAN
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/gregfrog/brew
+BugReports: https://github.com/gregfrog/brew/issues
