--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,26 +1,22 @@
-Package: brew
 Type: Package
+Package: brew
 Title: Templating Framework for Report Generation
 Version: 1.0-7
 Date: 2022-02-04
-Authors@R: c(person(given="Jeffrey", 
-                  family="Horner", 
-                  role = c("aut", "cph")),
-             person(given="Greg", 
-                  family="Hunt", 
-                  email = "greg@firmansyah.com", 
-                  role = c("aut", "cre", "cph")))
-Author: Jeffrey Horner [aut, cph],
-      Greg Hunt [aut, cre, cph]
+Authors@R: c(
+    person("Jeffrey", "Horner", role = c("aut", "cph")),
+    person("Greg", "Hunt", , "greg@firmansyah.com", role = c("aut", "cre", "cph"))
+  )
+Author: Jeffrey Horner [aut, cph], Greg Hunt [aut, cre, cph]
 Maintainer: Greg Hunt <greg@firmansyah.com>
-Description: Implements a templating framework for mixing text and
-        R code for report generation. brew template syntax is similar
-        to PHP, Ruby's erb module, Java Server Pages, and Python's psp
-        module.
+Description: Implements a templating framework for mixing text and R code
+    for report generation. brew template syntax is similar to PHP, Ruby's
+    erb module, Java Server Pages, and Python's psp module.
 License: GPL-2
-Repository: CRAN
+URL: https://github.com/gregfrog/brew
+BugReports: https://github.com/gregfrog/brew/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-URL: https://github.com/gregfrog/brew
-BugReports: https://github.com/gregfrog/brew/issues
+Encoding: UTF-8
+Repository: CRAN
