Update GPL version.  Fix character escape

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: brew
 Title: Templating Framework for Report Generation
-Version: 1.0-8
+Version: 1.0-10
 Authors@R: c(
     person("Jeffrey", "Horner", role = c("aut", "cph")),
     person("Greg", "Hunt", , "greg@firmansyah.com", role = c("aut", "cre", "cph"))
@@ -9,7 +9,7 @@ Authors@R: c(
 Description: Implements a templating framework for mixing text and R code
     for report generation. brew template syntax is similar to PHP, Ruby's
     erb module, Java Server Pages, and Python's psp module.
-License: GPL-2
+License: GPL (>=2)
 URL: https://github.com/gregfrog/brew
 BugReports: https://github.com/gregfrog/brew/issues
 Suggests: 
